versioned_docs/version-1.25/reference/feature-flags.mdx
---
title: Feature Flags
description: Okteto's feature flags on the CLI
sidebar_label: Feature Flags
id: feature-flags
---

import Image from "@theme/Image";

Setting any feature flag variable as an [Admin Variable](admin/dashboard.mdx#admin-variables) will enable that feature flag for all operations within the cluster.
Admin variables are equivalent to defining that variable on every developer's machine.


Below is a list of those variables that you can use to leverage these newer and experimental features:

| Environment Variable                         | Description                                                                                                                                                                                                                     | Default Value          |
|----------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------|
| OKTETO_SMART_BUILDS_ENABLED                  | Enables the [Smart Builds feature](core/build-service.mdx#smart-builds) that uses a hash of the build context to determine if an image needs to be rebuilt or can be pulled from the registry. This can accelerate build times. | `true`                |
| OKTETO_COMPOSE_VOLUME_AFFINITY_ENABLED       | Compose services mounting the same volume will be placed on the same node using Kubernetes's pod affinity.                                                                                                                      | `true`                 |
| OKTETO_KUBERNETES_TIMEOUT                    | Specifies the timeout while deploying.                                                                                                                                                                                          | `0`                    |
| OKTETO_FORCE_REMOTE                          | If true, the CLI will run deploy and destroy commands on the cluster instead of running them locally.                                                                                                                           | `false`                |
| OKTETO_FOLDER                                | Defines the path where the Okteto folder is located.                                                                                                                                                                            | `$OKTETO_HOME/.okteto` |
| OKTETO_LOCAL_REGISTRY_STORE_PRIORITY_ENABLED | Gives more priority to the local registry credentials than the Okteto Registry Credentials.                                                                                                                                              | `false`                 |
| OKTETO_SUPPORT_STACKS_ENABLED                | Support Okteto Stacks syntax                                                                                                                                                                                                    | `false`             
| OKTETO_USE_STATIC_KUBETOKEN                  | Use a fixed token rather than a dynamic token for interactions with the Kubernetes API.                                                                                                                                         | `false`                |
| OKTETO_AUTOGENERATE_STIGNORE                 | If true, generates the `.stignore` file when running `okteto up`.                                                                                                                                                               | `false`                |
| OKTETO_AUTODEPLOY                            | If set, forces the deployment of the development environment on `okteto up`.                                                                                                                                                    | `false`                |
| OKTETO_COMPOSE_UPDATE_STRATEGY               | Defines the update strategy that the compose must translate (it can be one of: `rolling`/`recreate`/`on-delete`).                                                                                                               | N/A                    |
| OKTETO_DISABLE_SPINNER                       | If set, disables the spinner rotation.                                                                                                                                                                                           | `false`                |
| OKTETO_SYNCTHING_VERSION                     | Specifies the Syncthing version the CLI must use.                                                                                                                                                                               | N/A                    |